error.txt
C:\Users\tanma\OneDrive\Desktop\MY ALL PROJECTS\AI LIBRARY PROJECT\script.js:709
  }) ();
   ^

SyntaxError: Unexpected token ')'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0
